--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-cli-proxy-live-reload",
   "version": "1.0.0",
-  "description": "Allows Ember CLI",
+  "description": "Allows Ember CLI to proxy its livereload requests",
   "directories": {
     "doc": "doc",
     "test": "tests"
